frontend/test/should_pass/exec_004.grg
using deep_model_001;

rule r(p : B) : (B) {
  l:B;
  modify{
    r:B;

    exec(r(p));
    exec(r(l));
    exec(r(r));

    exec((r(p)));
    exec(((r(l))));
    exec((((r(r)))));

    exec((h:B)=r(p));
    exec((h:B)=r(l));
    exec((h:B)=r(r));

    exec(!r(p));
    exec(!r(l));
    exec(!r(r));

    exec(!(h:B)=r(p));
    exec(!(h:B)=r(l));
    exec(!(h:B)=r(r));

    exec(r(p) |  r(p));
    exec(r(p) &  r(p));
    exec(r(p) || r(p));
    exec(r(p) && r(p));
    exec(r(p) ^  r(p));

    exec(r(p) $|  r(p));
    exec(r(p) $&  r(p));
    exec(r(p) $|| r(p));
    exec(r(p) $&& r(p));
    exec(r(p) $^  r(p));

    exec((h:B)=r(p) |  (h)=r(p));
    exec((h:B)=r(p) &  (h)=r(p));
    exec((h:B)=r(p) || (h)=r(p));
    exec((h:B)=r(p) && (h)=r(p));
    exec((h:B)=r(p) ^  (h)=r(p));

    exec((h:B)=r(p) $|  (h)=r(p));
    exec((h:B)=r(p) $&  (h)=r(p));
    exec((h:B)=r(p) $|| (h)=r(p));
    exec((h:B)=r(p) $&& (h)=r(p));
    exec((h:B)=r(p) $^  (h)=r(p));

    exec(<r(p) |  r(p)>);
    exec(<r(p) &  r(p)>);
    exec(<r(p) || r(p)>);
    exec(<r(p) && r(p)>);
    exec(<r(p) ^  r(p)>);
    
    exec(< <r(p)> & r(p)>);
    exec(<r(p) & (r(p) & r(p))>);
    exec(<r(p) & <r(p) & r(p)> >);

    exec((h:B)=r(p) |  (h)=r(p) |  def(h));
    exec((h:B)=r(p) &  (h)=r(p) &  def(h));
    exec((h:B)=r(p) || (h)=r(p) || def(h));
    exec((h:B)=r(p) && (h)=r(p) && def(h));
    exec((h:B)=r(p) ^  (h)=r(p) ^  def(h));
    
    exec((h:B)=r(p) |  (k:B)=r(p) |  def(h,k));
    exec((h:B)=r(p) &  (k:B)=r(p) &  def(h,k));
    exec((h:B)=r(p) || (k:B)=r(p) || def(h,k));
    exec((h:B)=r(p) && (k:B)=r(p) && def(h,k));
    exec((h:B)=r(p) ^  (k:B)=r(p) ^  def(h,k));
    
    exec((h:B)=r(p) |  (k:B)=r(p) |  h=k);
    exec((h:B)=r(p) &  (k:B)=r(p) &  k=h);
    exec((h:B)=r(p) || (k:B)=r(p) || h=l);
    exec((h:B)=r(p) && (k:B)=r(p) && h=r);
    exec((h:B)=r(p) ^  (k:B)=r(p) ^  h=p);
    
    exec(h=k |  (h:B)=r(h) |  (k:B)=r(h));
    exec(k=h &  (h:B)=r(h) &  (k:B)=r(h));
    exec(h=l || (h:B)=r(h) || (k:B)=r(h));
    exec(h=r && (h:B)=r(h) && (k:B)=r(h));
    exec(h=p ^  (h:B)=r(h) ^  (k:B)=r(h));

    exec((h)=r(p) |  (k:B)=r(p) |  (h:B)=k);
    exec((h)=r(p) &  (k:B)=r(p) &  (h:B)=h);
    exec((h)=r(p) || (k:B)=r(p) || (h:B)=l);
    exec((h)=r(p) && (k:B)=r(p) && (h:B)=r);
    exec((h)=r(p) ^  (k:B)=r(p) ^  (h:B)=p);

    exec((h:B)=k |  (h)=r(h) |  (k:B)=r(h));
    exec((h:B)=h &  (h)=r(h) &  (k:B)=r(h));
    exec((h:B)=l || (h)=r(h) || (k:B)=r(h));
    exec((h:B)=r && (h)=r(h) && (k:B)=r(h));
    exec((h:B)=p ^  (h)=r(h) ^  (k:B)=r(h));
    
    exec(r(p)[1]   $|  r(p));
    exec(r(p)[1:5] $&  r(p));
    exec(r(p)[*]   $|| r(p));
    exec(r(p)[+]   $&& r(p));
    exec(r(p)[2:*] $^  r(p));

    exec( ( (h:B)=r(p) |  (h)=r(p) )[1]   |  (h)=r(p) );
    exec( ( (h:B)=r(p) &  (h)=r(p) )[1:5] &  (h)=r(p) );
    exec( ( (h:B)=r(p) || (h)=r(p) )[*]   || (h)=r(p) );
    exec( ( (h:B)=r(p) && (h)=r(p) )[+]   && (h)=r(p) );
    exec( ( (h:B)=r(p) ^  (h)=r(p) )[2:*] ^  (h)=r(p) );

    exec( b:boolean=( ( (h:B)=r(p) |  (h)=r(p) )[1]   ) |  b |  (h)=r(p) );
    exec( b:boolean=( ( (h:B)=r(p) &  (h)=r(p) )[1:5] ) &  b &  (h)=r(p) );
    exec( b:boolean=( ( (h:B)=r(p) || (h)=r(p) )[*]   ) || b || (h)=r(p) );
    exec( b:boolean=( ( (h:B)=r(p) && (h)=r(p) )[+]   ) && b && (h)=r(p) );
    exec( b:boolean=( ( (h:B)=r(p) ^  (h)=r(p) )[2:*] ) ^  b ^  (h)=r(p) );

    exec( b=( ( (h:B)=r(p) |  (h)=r(p) )[1]   ) |  b:boolean |  (h)=r(p) );
    exec( b=( ( (h:B)=r(p) &  (h)=r(p) )[1:5] ) &  b:boolean &  (h)=r(p) );
    exec( b=( ( (h:B)=r(p) || (h)=r(p) )[*]   ) || b:boolean || (h)=r(p) );
    exec( b=( ( (h:B)=r(p) && (h)=r(p) )[+]   ) && b:boolean && (h)=r(p) );
    exec( b=( ( (h:B)=r(p) ^  (h)=r(p) )[2:*] ) ^  b:boolean ^  (h)=r(p) );

    exec(b:boolean=(r(p)));
    exec(b:boolean=(!r(l)));
    exec(b:boolean=(!(h:B)=r(r)));

    exec(r(p) |  true);
    exec(r(p) &  true);
    exec(r(p) || true);
    exec(r(p) && true);
    exec(r(p) ^  true);

    exec(r(p) |  false);
    exec(r(p) &  false);
    exec(r(p) || false);
    exec(r(p) && false);
    exec(r(p) ^  false);

    exec(true |  false);
    exec(true &  false);
    exec(true || false);
    exec(true && false);
    exec(true ^  false);

    exec(b:boolean=true & (b=(r(p)) & !b)*);
    exec(b=true & (b=(r(p)) & !b:boolean)*);

    return (r);
  }
}
