frontend/test/should_fail/exectype_AssignMapAccessToVar3.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<AA,HH> =map<AA,HH> ;> a:A=varia && h:H=m[a]); // a must be AA, A is not sufficient
	}
}